課題対応NO１（checkstyle）